[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.2"
piston_window = "0.146.0"
rodio = "0.21.1"
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.143", optional = true }
tungstenite = { version = "0.26.2", optional = true }

[features]
debug_draw = []
spectator = ["dep:serde", "dep:serde_json", "dep:tungstenite"]
